dark mode fix

--- a/U3A.UI.Forms/Pages/Introduction/MenuIntroduction.razor.css
+++ b/U3A.UI.Forms/Pages/Introduction/MenuIntroduction.razor.css
@@ -50,7 +50,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 6px -1px var(--DS-color-border-primary-default-rest), 4px 2px 4px -2px var(--DS-color-border-primary-default-rest);
     transition: box-shadow 0.2s;
     border-radius: 1rem;
     color: var(--bs-link-color-rgb);
@@ -74,10 +74,11 @@
         letter-spacing: 0em;
         text-align: center;
         text-decoration: unset;
+        color: var(--DS-color-content-primary-default-rest);
     }
 
 ::deep .icon-fill {
-    fill: var(--bs-primary);
+    fill: var(--bg-fl-primary-subtle);
 }
 
 ::deep .welcome-card .welcome-card-back {
@@ -86,8 +87,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: var(--bs-body-color);
-    opacity: 0.05;
+    background-color: var(--DS-primary-20);
+    opacity: 0.3;
     border-radius: 1rem;
     z-index: -2;
 }
